views update